Fix table width and white space issues on register switch - v1.7.4

--- a/farm-assistant-addon/static/style.css
+++ b/farm-assistant-addon/static/style.css
@@ -181,6 +181,7 @@ table {
     background-color: var(--input-bg);
     border: 1px solid var(--table-border);
     margin-top: 0;
+    table-layout: auto;
 }
 
 thead {
